<?xml version="1.0"?>
<package>
    <name>costmap_plugins</name>
    <version>0.0.1</version>
    <description>ROS-Package that implements a costmap layer to add keep out zones by services.</description>
    <maintainer email="tongronglei@163.com">Mr.Tony</maintainer>
    <author email="tongronglei@163.com">Mr.Tony</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>message_generation</buildtool_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>

    <export>
        <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    </export>

</package>