<package format="2">
    <name>xju_pnc</name>
    <version>0.0.1</version>
    <description>
        <p>planning and control package for xju robot</p>
    </description>
    <author>TODO</author>
    <maintainer email="tongronglei@163.com" />
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>roslaunch</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
</package>
