<package format="2">
  <name>xju_simu</name>
  <version>0.0.1</version>
  <description>
    <p>URDF Description package for xju robot</p>
    <p>This package contains configuration data, 3D models and launch files</p>
  </description>
  <author>TODO</author>
  <maintainer email="tongronglei@163.com" />
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>joint_state_publisher</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
</package>
