<package format="2">
  <name>xju_slam</name>
  <version>0.0.1</version>
  <description>
    <p>Slam package for xju robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="tongronglei@163.com" />
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
