<?xml version="1.0"?>
<package format="2">
  <name>video_recorder</name>
  <version>0.0.1</version>

  <description>xju robot REC.</description>

  <author>Mr.Tony</author>
  <maintainer email="tongronglei@163.com" />
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
</package>
